--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,2 @@
 src/wetsuite/tests/testfiles/**    linguist-detectable=false
-src/wetsuite/tests/testfiles/**    -linguist-detectable
+#src/wetsuite/tests/testfiles/**    -linguist-detectable
